# zebrafish-bootloader

./: .gitignore  Cargo.toml  bootloader.c
.github/workflows/: build_uefi.yml
src/: main.rs
