[package]
name = "bootloader-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
uefi = { version = "0", features = ["alloc", "global_allocator", "panic_handler", "logger"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
strip = true
